2005-02-01 Jens Dagerbo <jens.dagerbo@swipnet.se>
 * Implemented a fix for BR 91757 which also removes the silly runtime dependency we had on kdebase

2005-01-28  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
 * Added a Ruby KConfig XT project template

2005-01-25 Jens Dagerbo <jens.dagerbo@swipnet.se>
 * Reimplemented "Forward" for source navigation history

2005-01-23 Amilcar Lucas <amilcar@kdevelop.org>
 * Updated support for Doxygen up to 1.4.1

2005-01-22 Jens Dagerbo <jens.dagerbo@swipnet.se>
 * Global scope plugins are once again optional.
 * Fixed source navigation history (by reducing the ambition to something that can work).
 * Added the Version Control Manager plugin. Now we can decide which VCS system to use again. :)

2005-01-20 Jens Dagerbo <jens.dagerbo@swipnet.se>
 * Further cleanup of plugin handling in PluginController/ProjectManager.
 * Removed the last traces of in-project language switching. 
 
2005-01-09 Jens Dagerbo <jens.dagerbo@swipnet.se>
 * Finished the new CTags frontend.

2005-01-08 Jens Dagerbo <jens.dagerbo@swipnet.se>
 * Made it possible to finally remove Code Completion databases via the GUI
 * Cleaned up the context menu mess (at least it's optional now, and the code 
 is cleaner).

2005-01-03 Robert Gruber <rgruber@users.sourceforge.net>
 * Added support for CVS commands edit, unedit and editors

2004-12-19 Alexander Dymo <adymo@kdevelop.org>
 * Made it possible to add custom build commands (like make install-exec)
   for the subproject context menu in automake manager.
 
2004-12-17 Alexander Dymo <adymo@kdevelop.org>
 * Advanced subclassing option in C++ New Class Wizard can be used
   for classes in the persistant class store. This means that if
   the PCS for Qt library is built then advanced subclassing from
   Qt classes is possible in the wizard.

2004-12-15 Alexander Dymo <adymo@kdevelop.org>
 * Finished the implementation of plugin profiles for KDevelop shell
   and shell extension architecture.